--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,6 +9,8 @@
   "dependencies": {
     "@gtnsimon/nuxt-booki-backend": "1.0.0",
     "@nuxtjs/axios": "^5.13.6",
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue": "^2.22.0",
     "minireset.css": "^0.0.7",
     "nuxt": "2.15.8",
     "sass": "^1.49.9",
